final-compiler/parser.output
Terminals unused in grammar

    CONST


Rules useless in parser due to conflicts

   63 $@4: ε


State 12 conflicts: 10 shift/reduce
State 20 conflicts: 2 shift/reduce
State 25 conflicts: 23 reduce/reduce
State 28 conflicts: 23 reduce/reduce
State 32 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 43 conflicts: 2 shift/reduce
State 51 conflicts: 2 shift/reduce
State 57 conflicts: 1 shift/reduce
State 75 conflicts: 21 reduce/reduce
State 131 conflicts: 2 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 2 shift/reduce
State 142 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 198 conflicts: 2 shift/reduce
State 199 conflicts: 2 shift/reduce
State 229 conflicts: 1 shift/reduce
State 241 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: item_list

    2 item_list: item_list item
    3          | ε

    4 item: declaration
    5     | statement
    6     | ';'

    7 opt_semi: ';'
    8         | ε

    9 declaration: variable_declaration
   10            | struct_declaration
   11            | function_declaration

   12 variable_declaration: LET IDENTIFIER '=' expression opt_semi
   13                     | VAR IDENTIFIER '=' expression opt_semi
   14                     | LET IDENTIFIER ':' type_spec '=' expression opt_semi
   15                     | VAR IDENTIFIER ':' type_spec '=' expression opt_semi
   16                     | VAR IDENTIFIER ':' type_spec opt_semi
   17                     | LET IDENTIFIER ':' type_spec opt_semi

   18 type_spec: TYPE_INT_KW
   19          | TYPE_DOUBLE_KW
   20          | TYPE_BOOL_KW
   21          | TYPE_CHAR_KW
   22          | TYPE_STRING_KW
   23          | TYPE_VOID_KW
   24          | '[' type_spec ']'
   25          | IDENTIFIER

   26 struct_declaration: STRUCT IDENTIFIER '{' struct_members '}' opt_semi

   27 struct_members: struct_members struct_member
   28               | struct_member

   29 struct_member: VAR IDENTIFIER ':' type_spec opt_semi
   30              | LET IDENTIFIER ':' type_spec opt_semi

   31 $@1: ε

   32 function_declaration: FUNC IDENTIFIER '(' opt_parameters ')' ARROW type_spec $@1 '{' statements '}' opt_semi

   33 $@2: ε

   34 function_declaration: FUNC IDENTIFIER '(' opt_parameters ')' $@2 '{' statements '}' opt_semi

   35 opt_parameters: parameters
   36               | ε

   37 parameters: parameters ',' parameter
   38           | parameter

   39 parameter: IDENTIFIER ':' type_spec
   40          | IDENTIFIER IDENTIFIER ':' type_spec

   41 statements: statements statement
   42           | ε

   43 statement: assignment opt_semi
   44          | if_statement
   45          | switch_statement
   46          | while_statement
   47          | repeat_while_statement opt_semi
   48          | for_in_statement
   49          | return_statement opt_semi
   50          | print_statement opt_semi
   51          | variable_declaration
   52          | expression opt_semi
   53          | ';'

   54 assignment: IDENTIFIER '=' expression
   55           | IDENTIFIER '[' expression ']' '=' expression
   56           | IDENTIFIER '.' IDENTIFIER '=' expression

   57 print_statement: PRINT '(' expression ')'

   58 return_statement: RETURN expression
   59                 | RETURN

   60 if_header: IF expression

   61 $@3: ε

   62 if_statement: if_header '{' $@3 statements '}'

   63 $@4: ε

   64 @5: ε

   65 if_statement: if_header '{' $@4 statements '}' ELSE @5 '{' statements '}'

   66 $@6: ε

   67 switch_statement: SWITCH expression '{' $@6 switch_cases '}'

   68 switch_cases: switch_cases switch_case
   69             | switch_case

   70 @7: ε

   71 switch_case: CASE expression ':' @7 statements
   72            | DEFAULT ':' statements

   73 @8: ε

   74 while_header: WHILE @8 expression

   75 $@9: ε

   76 while_statement: while_header '{' $@9 statements '}'

   77 repeat_header: REPEAT

   78 $@10: ε

   79 repeat_while_statement: repeat_header '{' $@10 statements '}' WHILE expression

   80 @11: ε

   81 for_in_statement: FOR IDENTIFIER IN expression DOTDOTDOT expression @11 '{' statements '}'

   82 @12: ε

   83 for_in_statement: FOR IDENTIFIER IN IDENTIFIER @12 '{' statements '}'

   84 expression: literal
   85           | IDENTIFIER
   86           | array_access
   87           | field_access
   88           | array_literal
   89           | call_or_init
   90           | '(' expression ')'
   91           | expression '+' expression
   92           | expression '-' expression
   93           | expression '*' expression
   94           | expression '/' expression
   95           | expression '%' expression
   96           | expression EQ expression
   97           | expression NE expression
   98           | expression LT expression
   99           | expression GT expression
  100           | expression LE expression
  101           | expression GE expression
  102           | expression AND expression
  103           | expression OR expression
  104           | NOT expression
  105           | '-' expression

  106 literal: INT_LITERAL
  107        | DOUBLE_LITERAL
  108        | BOOL_LITERAL
  109        | CHAR_LITERAL
  110        | STRING_LITERAL

  111 array_literal: '[' arguments ']'

  112 array_access: IDENTIFIER '[' expression ']'

  113 field_access: IDENTIFIER '.' IDENTIFIER

  114 call_or_init: IDENTIFIER '(' opt_arguments ')'

  115 opt_arguments: arguments
  116              | ε

  117 arguments: arguments ',' argument
  118          | argument

  119 argument: IDENTIFIER ':' expression
  120         | expression


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 95
    '(' (40) 32 34 57 90 114
    ')' (41) 32 34 57 90 114
    '*' (42) 93
    '+' (43) 91
    ',' (44) 37 117
    '-' (45) 92 105
    '.' (46) 56 113
    '/' (47) 94
    ':' (58) 14 15 16 17 29 30 39 40 71 72 119
    ';' (59) 6 7 53
    '=' (61) 12 13 14 15 54 55 56
    '[' (91) 24 55 111 112
    ']' (93) 24 55 111 112
    '{' (123) 26 32 34 62 65 67 76 79 81 83
    '}' (125) 26 32 34 62 65 67 76 79 81 83
    error (256)
    LET (258) 12 14 17 30
    VAR (259) 13 15 16 29
    CONST (260)
    IF (261) 60
    ELSE (262) 65
    SWITCH (263) 67
    CASE (264) 71
    DEFAULT (265) 72
    WHILE (266) 74 79
    REPEAT (267) 77
    FOR (268) 81 83
    IN (269) 81 83
    FUNC (270) 32 34
    RETURN (271) 58 59
    STRUCT (272) 26
    PRINT (273) 57
    ARROW (274) 32
    DOTDOTDOT (275) 81
    TYPE_INT_KW (276) 18
    TYPE_DOUBLE_KW (277) 19
    TYPE_BOOL_KW (278) 20
    TYPE_CHAR_KW (279) 21
    TYPE_STRING_KW (280) 22
    TYPE_VOID_KW (281) 23
    INT_LITERAL <int_val> (282) 106
    DOUBLE_LITERAL <double_val> (283) 107
    BOOL_LITERAL <bool_val> (284) 108
    CHAR_LITERAL <char_val> (285) 109
    STRING_LITERAL <str_val> (286) 110
    IDENTIFIER <str_val> (287) 12 13 14 15 16 17 25 26 29 30 32 34 39 40 54 55 56 81 83 85 112 113 114 119
    EQ (288) 96
    NE (289) 97
    LE (290) 100
    GE (291) 101
    AND (292) 102
    OR (293) 103
    NOT (294) 104
    LT (295) 98
    GT (296) 99
    UMINUS (297)


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    program (60)
        on left: 1
        on right: 0
    item_list (61)
        on left: 2 3
        on right: 1 2
    item (62)
        on left: 4 5 6
        on right: 2
    opt_semi (63)
        on left: 7 8
        on right: 12 13 14 15 16 17 26 29 30 32 34 43 47 49 50 52
    declaration (64)
        on left: 9 10 11
        on right: 4
    variable_declaration (65)
        on left: 12 13 14 15 16 17
        on right: 9 51
    type_spec <type_info> (66)
        on left: 18 19 20 21 22 23 24 25
        on right: 14 15 16 17 24 29 30 32 39 40
    struct_declaration (67)
        on left: 26
        on right: 10
    struct_members <member_list> (68)
        on left: 27 28
        on right: 26 27
    struct_member <member> (69)
        on left: 29 30
        on right: 27 28
    function_declaration (70)
        on left: 32 34
        on right: 11
    $@1 (71)
        on left: 31
        on right: 32
    $@2 (72)
        on left: 33
        on right: 34
    opt_parameters <param_list> (73)
        on left: 35 36
        on right: 32 34
    parameters <param_list> (74)
        on left: 37 38
        on right: 35 37
    parameter <param> (75)
        on left: 39 40
        on right: 37 38
    statements (76)
        on left: 41 42
        on right: 32 34 41 62 65 71 72 76 79 81 83
    statement (77)
        on left: 43 44 45 46 47 48 49 50 51 52 53
        on right: 5 41
    assignment (78)
        on left: 54 55 56
        on right: 43
    print_statement (79)
        on left: 57
        on right: 50
    return_statement (80)
        on left: 58 59
        on right: 49
    if_header <str_val> (81)
        on left: 60
        on right: 62 65
    if_statement (82)
        on left: 62 65
        on right: 44
    $@3 (83)
        on left: 61
        on right: 62
    $@4 (84)
        on left: 63
        on right: 65
    @5 (85)
        on left: 64
        on right: 65
    switch_statement (86)
        on left: 67
        on right: 45
    $@6 (87)
        on left: 66
        on right: 67
    switch_cases (88)
        on left: 68 69
        on right: 67 68
    switch_case (89)
        on left: 71 72
        on right: 68 69
    @7 (90)
        on left: 70
        on right: 71
    while_header <str_val> (91)
        on left: 74
        on right: 76
    @8 (92)
        on left: 73
        on right: 74
    while_statement (93)
        on left: 76
        on right: 46
    $@9 (94)
        on left: 75
        on right: 76
    repeat_header <str_val> (95)
        on left: 77
        on right: 79
    repeat_while_statement (96)
        on left: 79
        on right: 47
    $@10 (97)
        on left: 78
        on right: 79
    for_in_statement (98)
        on left: 81 83
        on right: 48
    @11 (99)
        on left: 80
        on right: 81
    @12 (100)
        on left: 82
        on right: 83
    expression <expr> (101)
        on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 12 13 14 15 52 54 55 56 57 58 60 67 71 74 79 81 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 112 119 120
    literal <expr> (102)
        on left: 106 107 108 109 110
        on right: 84
    array_literal <expr> (103)
        on left: 111
        on right: 88
    array_access <expr> (104)
        on left: 112
        on right: 86
    field_access <expr> (105)
        on left: 113
        on right: 87
    call_or_init <expr> (106)
        on left: 114
        on right: 89
    opt_arguments <arg_list> (107)
        on left: 115 116
        on right: 114
    arguments <arg_list> (108)
        on left: 117 118
        on right: 111 115 117
    argument <arg> (109)
        on left: 119 120
        on right: 117 118


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (item_list)

    program    go to state 1
    item_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: item_list •
    2 item_list: item_list • item

    LET             shift, and go to state 4
    VAR             shift, and go to state 5
    IF              shift, and go to state 6
    SWITCH          shift, and go to state 7
    WHILE           shift, and go to state 8
    REPEAT          shift, and go to state 9
    FOR             shift, and go to state 10
    FUNC            shift, and go to state 11
    RETURN          shift, and go to state 12
    STRUCT          shift, and go to state 13
    PRINT           shift, and go to state 14
    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 20
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24
    ';'             shift, and go to state 25

    $default  reduce using rule 1 (program)

    item                    go to state 26
    declaration             go to state 27
    variable_declaration    go to state 28
    struct_declaration      go to state 29
    function_declaration    go to state 30
    statement               go to state 31
    assignment              go to state 32
    print_statement         go to state 33
    return_statement        go to state 34
    if_header               go to state 35
    if_statement            go to state 36
    switch_statement        go to state 37
    while_header            go to state 38
    while_statement         go to state 39
    repeat_header           go to state 40
    repeat_while_statement  go to state 41
    for_in_statement        go to state 42
    expression              go to state 43
    literal                 go to state 44
    array_literal           go to state 45
    array_access            go to state 46
    field_access            go to state 47
    call_or_init            go to state 48


State 3

    0 $accept: program $end •

    $default  accept


State 4

   12 variable_declaration: LET • IDENTIFIER '=' expression opt_semi
   14                     | LET • IDENTIFIER ':' type_spec '=' expression opt_semi
   17                     | LET • IDENTIFIER ':' type_spec opt_semi

    IDENTIFIER  shift, and go to state 49


State 5

   13 variable_declaration: VAR • IDENTIFIER '=' expression opt_semi
   15                     | VAR • IDENTIFIER ':' type_spec '=' expression opt_semi
   16                     | VAR • IDENTIFIER ':' type_spec opt_semi

    IDENTIFIER  shift, and go to state 50


State 6

   60 if_header: IF • expression

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 51
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    expression     go to state 52
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48


State 7

   67 switch_statement: SWITCH • expression '{' $@6 switch_cases '}'

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 51
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    expression     go to state 53
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48


State 8

   74 while_header: WHILE • @8 expression

    $default  reduce using rule 73 (@8)

    @8  go to state 54


State 9

   77 repeat_header: REPEAT •

    $default  reduce using rule 77 (repeat_header)


State 10

   81 for_in_statement: FOR • IDENTIFIER IN expression DOTDOTDOT expression @11 '{' statements '}'
   83                 | FOR • IDENTIFIER IN IDENTIFIER @12 '{' statements '}'

    IDENTIFIER  shift, and go to state 55


State 11

   32 function_declaration: FUNC • IDENTIFIER '(' opt_parameters ')' ARROW type_spec $@1 '{' statements '}' opt_semi
   34                     | FUNC • IDENTIFIER '(' opt_parameters ')' $@2 '{' statements '}' opt_semi

    IDENTIFIER  shift, and go to state 56


State 12

   58 return_statement: RETURN • expression
   59                 | RETURN •

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 51
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    INT_LITERAL     [reduce using rule 59 (return_statement)]
    DOUBLE_LITERAL  [reduce using rule 59 (return_statement)]
    BOOL_LITERAL    [reduce using rule 59 (return_statement)]
    CHAR_LITERAL    [reduce using rule 59 (return_statement)]
    STRING_LITERAL  [reduce using rule 59 (return_statement)]
    IDENTIFIER      [reduce using rule 59 (return_statement)]
    NOT             [reduce using rule 59 (return_statement)]
    '-'             [reduce using rule 59 (return_statement)]
    '['             [reduce using rule 59 (return_statement)]
    '('             [reduce using rule 59 (return_statement)]
    $default        reduce using rule 59 (return_statement)

    expression     go to state 57
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48


State 13

   26 struct_declaration: STRUCT • IDENTIFIER '{' struct_members '}' opt_semi

    IDENTIFIER  shift, and go to state 58


State 14

   57 print_statement: PRINT • '(' expression ')'

    '('  shift, and go to state 59


State 15

  106 literal: INT_LITERAL •

    $default  reduce using rule 106 (literal)


State 16

  107 literal: DOUBLE_LITERAL •

    $default  reduce using rule 107 (literal)


State 17

  108 literal: BOOL_LITERAL •

    $default  reduce using rule 108 (literal)


State 18

  109 literal: CHAR_LITERAL •

    $default  reduce using rule 109 (literal)


State 19

  110 literal: STRING_LITERAL •

    $default  reduce using rule 110 (literal)


State 20

   54 assignment: IDENTIFIER • '=' expression
   55           | IDENTIFIER • '[' expression ']' '=' expression
   56           | IDENTIFIER • '.' IDENTIFIER '=' expression
   85 expression: IDENTIFIER •
  112 array_access: IDENTIFIER • '[' expression ']'
  113 field_access: IDENTIFIER • '.' IDENTIFIER
  114 call_or_init: IDENTIFIER • '(' opt_arguments ')'

    '='  shift, and go to state 60
    '.'  shift, and go to state 61
    '['  shift, and go to state 62
    '('  shift, and go to state 63

    '['       [reduce using rule 85 (expression)]
    '('       [reduce using rule 85 (expression)]
    $default  reduce using rule 85 (expression)


State 21

  104 expression: NOT • expression

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 51
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    expression     go to state 64
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48


State 22

  105 expression: '-' • expression

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 51
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    expression     go to state 65
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48


State 23

  111 array_literal: '[' • arguments ']'

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 66
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    expression     go to state 67
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48
    arguments      go to state 68
    argument       go to state 69


State 24

   90 expression: '(' • expression ')'

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 51
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    expression     go to state 70
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48


State 25

    6 item: ';' •
   53 statement: ';' •

    $end            reduce using rule 6 (item)
    $end            [reduce using rule 53 (statement)]
    LET             reduce using rule 6 (item)
    LET             [reduce using rule 53 (statement)]
    VAR             reduce using rule 6 (item)
    VAR             [reduce using rule 53 (statement)]
    IF              reduce using rule 6 (item)
    IF              [reduce using rule 53 (statement)]
    SWITCH          reduce using rule 6 (item)
    SWITCH          [reduce using rule 53 (statement)]
    WHILE           reduce using rule 6 (item)
    WHILE           [reduce using rule 53 (statement)]
    REPEAT          reduce using rule 6 (item)
    REPEAT          [reduce using rule 53 (statement)]
    FOR             reduce using rule 6 (item)
    FOR             [reduce using rule 53 (statement)]
    FUNC            reduce using rule 6 (item)
    FUNC            [reduce using rule 53 (statement)]
    RETURN          reduce using rule 6 (item)
    RETURN          [reduce using rule 53 (statement)]
    STRUCT          reduce using rule 6 (item)
    STRUCT          [reduce using rule 53 (statement)]
    PRINT           reduce using rule 6 (item)
    PRINT           [reduce using rule 53 (statement)]
    INT_LITERAL     reduce using rule 6 (item)
    INT_LITERAL     [reduce using rule 53 (statement)]
    DOUBLE_LITERAL  reduce using rule 6 (item)
    DOUBLE_LITERAL  [reduce using rule 53 (statement)]
    BOOL_LITERAL    reduce using rule 6 (item)
    BOOL_LITERAL    [reduce using rule 53 (statement)]
    CHAR_LITERAL    reduce using rule 6 (item)
    CHAR_LITERAL    [reduce using rule 53 (statement)]
    STRING_LITERAL  reduce using rule 6 (item)
    STRING_LITERAL  [reduce using rule 53 (statement)]
    IDENTIFIER      reduce using rule 6 (item)
    IDENTIFIER      [reduce using rule 53 (statement)]
    NOT             reduce using rule 6 (item)
    NOT             [reduce using rule 53 (statement)]
    '-'             reduce using rule 6 (item)
    '-'             [reduce using rule 53 (statement)]
    '['             reduce using rule 6 (item)
    '['             [reduce using rule 53 (statement)]
    '('             reduce using rule 6 (item)
    '('             [reduce using rule 53 (statement)]
    ';'             reduce using rule 6 (item)
    ';'             [reduce using rule 53 (statement)]
    $default        reduce using rule 6 (item)


State 26

    2 item_list: item_list item •

    $default  reduce using rule 2 (item_list)


State 27

    4 item: declaration •

    $default  reduce using rule 4 (item)


State 28

    9 declaration: variable_declaration •
   51 statement: variable_declaration •

    $end            reduce using rule 9 (declaration)
    $end            [reduce using rule 51 (statement)]
    LET             reduce using rule 9 (declaration)
    LET             [reduce using rule 51 (statement)]
    VAR             reduce using rule 9 (declaration)
    VAR             [reduce using rule 51 (statement)]
    IF              reduce using rule 9 (declaration)
    IF              [reduce using rule 51 (statement)]
    SWITCH          reduce using rule 9 (declaration)
    SWITCH          [reduce using rule 51 (statement)]
    WHILE           reduce using rule 9 (declaration)
    WHILE           [reduce using rule 51 (statement)]
    REPEAT          reduce using rule 9 (declaration)
    REPEAT          [reduce using rule 51 (statement)]
    FOR             reduce using rule 9 (declaration)
    FOR             [reduce using rule 51 (statement)]
    FUNC            reduce using rule 9 (declaration)
    FUNC            [reduce using rule 51 (statement)]
    RETURN          reduce using rule 9 (declaration)
    RETURN          [reduce using rule 51 (statement)]
    STRUCT          reduce using rule 9 (declaration)
    STRUCT          [reduce using rule 51 (statement)]
    PRINT           reduce using rule 9 (declaration)
    PRINT           [reduce using rule 51 (statement)]
    INT_LITERAL     reduce using rule 9 (declaration)
    INT_LITERAL     [reduce using rule 51 (statement)]
    DOUBLE_LITERAL  reduce using rule 9 (declaration)
    DOUBLE_LITERAL  [reduce using rule 51 (statement)]
    BOOL_LITERAL    reduce using rule 9 (declaration)
    BOOL_LITERAL    [reduce using rule 51 (statement)]
    CHAR_LITERAL    reduce using rule 9 (declaration)
    CHAR_LITERAL    [reduce using rule 51 (statement)]
    STRING_LITERAL  reduce using rule 9 (declaration)
    STRING_LITERAL  [reduce using rule 51 (statement)]
    IDENTIFIER      reduce using rule 9 (declaration)
    IDENTIFIER      [reduce using rule 51 (statement)]
    NOT             reduce using rule 9 (declaration)
    NOT             [reduce using rule 51 (statement)]
    '-'             reduce using rule 9 (declaration)
    '-'             [reduce using rule 51 (statement)]
    '['             reduce using rule 9 (declaration)
    '['             [reduce using rule 51 (statement)]
    '('             reduce using rule 9 (declaration)
    '('             [reduce using rule 51 (statement)]
    ';'             reduce using rule 9 (declaration)
    ';'             [reduce using rule 51 (statement)]
    $default        reduce using rule 9 (declaration)


State 29

   10 declaration: struct_declaration •

    $default  reduce using rule 10 (declaration)


State 30

   11 declaration: function_declaration •

    $default  reduce using rule 11 (declaration)


State 31

    5 item: statement •

    $default  reduce using rule 5 (item)


State 32

   43 statement: assignment • opt_semi

    ';'  shift, and go to state 71

    ';'       [reduce using rule 8 (opt_semi)]
    $default  reduce using rule 8 (opt_semi)

    opt_semi  go to state 72


State 33

   50 statement: print_statement • opt_semi

    ';'  shift, and go to state 71

    ';'       [reduce using rule 8 (opt_semi)]
    $default  reduce using rule 8 (opt_semi)

    opt_semi  go to state 73


State 34

   49 statement: return_statement • opt_semi

    ';'  shift, and go to state 71

    ';'       [reduce using rule 8 (opt_semi)]
    $default  reduce using rule 8 (opt_semi)

    opt_semi  go to state 74


State 35

   62 if_statement: if_header • '{' $@3 statements '}'
   65             | if_header • '{' $@4 statements '}' ELSE @5 '{' statements '}'

    '{'  shift, and go to state 75


State 36

   44 statement: if_statement •

    $default  reduce using rule 44 (statement)


State 37

   45 statement: switch_statement •

    $default  reduce using rule 45 (statement)


State 38

   76 while_statement: while_header • '{' $@9 statements '}'

    '{'  shift, and go to state 76


State 39

   46 statement: while_statement •

    $default  reduce using rule 46 (statement)


State 40

   79 repeat_while_statement: repeat_header • '{' $@10 statements '}' WHILE expression

    '{'  shift, and go to state 77


State 41

   47 statement: repeat_while_statement • opt_semi

    ';'  shift, and go to state 71

    ';'       [reduce using rule 8 (opt_semi)]
    $default  reduce using rule 8 (opt_semi)

    opt_semi  go to state 78


State 42

   48 statement: for_in_statement •

    $default  reduce using rule 48 (statement)


State 43

   52 statement: expression • opt_semi
   91 expression: expression • '+' expression
   92           | expression • '-' expression
   93           | expression • '*' expression
   94           | expression • '/' expression
   95           | expression • '%' expression
   96           | expression • EQ expression
   97           | expression • NE expression
   98           | expression • LT expression
   99           | expression • GT expression
  100           | expression • LE expression
  101           | expression • GE expression
  102           | expression • AND expression
  103           | expression • OR expression

    EQ   shift, and go to state 79
    NE   shift, and go to state 80
    LE   shift, and go to state 81
    GE   shift, and go to state 82
    AND  shift, and go to state 83
    OR   shift, and go to state 84
    LT   shift, and go to state 85
    GT   shift, and go to state 86
    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91
    ';'  shift, and go to state 71

    '-'       [reduce using rule 8 (opt_semi)]
    ';'       [reduce using rule 8 (opt_semi)]
    $default  reduce using rule 8 (opt_semi)

    opt_semi  go to state 92


State 44

   84 expression: literal •

    $default  reduce using rule 84 (expression)


State 45

   88 expression: array_literal •

    $default  reduce using rule 88 (expression)


State 46

   86 expression: array_access •

    $default  reduce using rule 86 (expression)


State 47

   87 expression: field_access •

    $default  reduce using rule 87 (expression)


State 48

   89 expression: call_or_init •

    $default  reduce using rule 89 (expression)


State 49

   12 variable_declaration: LET IDENTIFIER • '=' expression opt_semi
   14                     | LET IDENTIFIER • ':' type_spec '=' expression opt_semi
   17                     | LET IDENTIFIER • ':' type_spec opt_semi

    '='  shift, and go to state 93
    ':'  shift, and go to state 94


State 50

   13 variable_declaration: VAR IDENTIFIER • '=' expression opt_semi
   15                     | VAR IDENTIFIER • ':' type_spec '=' expression opt_semi
   16                     | VAR IDENTIFIER • ':' type_spec opt_semi

    '='  shift, and go to state 95
    ':'  shift, and go to state 96


State 51

   85 expression: IDENTIFIER •
  112 array_access: IDENTIFIER • '[' expression ']'
  113 field_access: IDENTIFIER • '.' IDENTIFIER
  114 call_or_init: IDENTIFIER • '(' opt_arguments ')'

    '.'  shift, and go to state 97
    '['  shift, and go to state 98
    '('  shift, and go to state 63

    '['       [reduce using rule 85 (expression)]
    '('       [reduce using rule 85 (expression)]
    $default  reduce using rule 85 (expression)


State 52

   60 if_header: IF expression •
   91 expression: expression • '+' expression
   92           | expression • '-' expression
   93           | expression • '*' expression
   94           | expression • '/' expression
   95           | expression • '%' expression
   96           | expression • EQ expression
   97           | expression • NE expression
   98           | expression • LT expression
   99           | expression • GT expression
  100           | expression • LE expression
  101           | expression • GE expression
  102           | expression • AND expression
  103           | expression • OR expression

    EQ   shift, and go to state 79
    NE   shift, and go to state 80
    LE   shift, and go to state 81
    GE   shift, and go to state 82
    AND  shift, and go to state 83
    OR   shift, and go to state 84
    LT   shift, and go to state 85
    GT   shift, and go to state 86
    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91

    $default  reduce using rule 60 (if_header)


State 53

   67 switch_statement: SWITCH expression • '{' $@6 switch_cases '}'
   91 expression: expression • '+' expression
   92           | expression • '-' expression
   93           | expression • '*' expression
   94           | expression • '/' expression
   95           | expression • '%' expression
   96           | expression • EQ expression
   97           | expression • NE expression
   98           | expression • LT expression
   99           | expression • GT expression
  100           | expression • LE expression
  101           | expression • GE expression
  102           | expression • AND expression
  103           | expression • OR expression

    EQ   shift, and go to state 79
    NE   shift, and go to state 80
    LE   shift, and go to state 81
    GE   shift, and go to state 82
    AND  shift, and go to state 83
    OR   shift, and go to state 84
    LT   shift, and go to state 85
    GT   shift, and go to state 86
    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91
    '{'  shift, and go to state 99


State 54

   74 while_header: WHILE @8 • expression

    INT_LITERAL     shift, and go to state 15
    DOUBLE_LITERAL  shift, and go to state 16
    BOOL_LITERAL    shift, and go to state 17
    CHAR_LITERAL    shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    IDENTIFIER      shift, and go to state 51
    NOT             shift, and go to state 21
    '-'             shift, and go to state 22
    '['             shift, and go to state 23
    '('             shift, and go to state 24

    expression     go to state 100
    literal        go to state 44
    array_literal  go to state 45
    array_access   go to state 46
    field_access   go to state 47
    call_or_init   go to state 48


State 55

   81 for_in_statement: FOR IDENTIFIER • IN expression DOTDOTDOT expression @11 '{' statements '}'
   83                 | FOR IDENTIFIER • IN IDENTIFIER @12 '{' statements '}'

    IN  shift, and go to state 101


State 56

   32 function_declaration: FUNC IDENTIFIER • '(' opt_parameters ')' ARROW type_spec $@1 '{' statements '}' opt_semi
   34                     | FUNC IDENTIFIER • '(' opt_parameters ')' $@2 '{' statements '}' opt_semi

    '('  shift, and go to state 102


State 57

   58 return_statement: RETURN expression •
   91 expression: expression • '+' expression
   92           | expression • '-' expression
   93           | expression • '*' expression
   94           | expression • '/' expression
   95           | expression • '%' expression
   96           | expression • EQ expression
   97           | expression • NE expression
   98           | expression • LT expression
   99           | expression • GT expression
  100           | expression • LE expression
  101           | expression • GE expression
  102           | expression • AND expression
  103           | expression • OR expression
